--- a/server.template.ejs
+++ b/server.template.ejs
@@ -9,6 +9,9 @@
     <%%- title %>
     <%%- link %>
     <%%- style %>
+    <style id="jss-server-side" type="text/css">
+        <%%- materialCss %>
+    </style>
 </head>
 <body>
 <div id="root">
